<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">LcmEmulator</string>
    <string name="appbar_title">Character LCD Module Emulator</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_about">About</string>

    <!-- Preference Titles -->
    <string name="network_settings_header">Network</string>
    <string name="ui_header">UI</string>

    <string name="portnum_title">Port Number</string>
    <string name="roundborder_title">Apply round border pixel</string>
    <string name="lcd_panel_color_title">LCD Background Colour</string>
    <string name="positive_pixel_color_title">Positive pixel color</string>
    <string name="negative_pixel_color_title">Negative pixel color</string>

    <string name="wrong_format_portnum">Wrong port number format.</string>

    <!-- Sync Preferences -->
    <string name="about_page_description">Re-use the old cell phone for the PC\'s information display attachment screen.</string>
    <string name="point2point_title">Use point-to-point render</string>
    <string name="color_presets">Color Presets</string>
    <string name="close">Close</string>
    <string name="general_settings">General Settings</string>
    <string name="back">Back</string>
    <string name="more_settings">More settings</string>
    <string name="builtin">Builtin</string>
    <string name="custom">Custom</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="edit_preset">Edit Preset</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
</resources>
